Fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -718,6 +718,7 @@
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
 		background-repeat: repeat, no-repeat;
+		overflow: hidden;
 	}
 
 	#intro div {
